--- a/draw/templates/draw/index.html
+++ b/draw/templates/draw/index.html
@@ -19,7 +19,6 @@
     <canvas id="myCanvas" width="750px" height="750px" style="border: 2px solid red"></canvas>
 </body>
 <script>
-
     // setting up the canvas and one paper tool
     var canvas = document.getElementById('myCanvas');
     paper.setup(canvas);
@@ -28,19 +27,42 @@
     // getting the URL (you may want to use for Exercise 3)
     var url = window.location.href;
 
-    //var socket = new WebSocket(
-    //    'ws://http://p4-bryang001-bryang001606770.codeanyapp.com:8765/');
+    //last dot made
+    var dot = {};
+  
+    /* WebSockets */
+    // create a new websocket connecting to the server
+    var socket = new WebSocket('ws://p4-bryang001-bryang001606770.codeanyapp.com:8765/');
+  
+    // triggered when receiving a message from the server
+    socket.onmessage = function(receivedMessage) {
+      // do something when you receive a message: Draw the new dot.
+      var messageObj = JSON.parse(receivedMessage.data);
+      console.log("messageObj: " + messageObj);
+      var circle = new paper.Path.Circle(new paper.Point(messageObj[1], messageObj[2]), 2);
+	    circle.fillColor = 'black';
+    };
 
-    //array to keep track of all the dots on screen
-    var dots = new Array();
-    
+    // notify console if socket closes unexpectedly
+    socket.onclose = function(e) {
+        console.error('Chat socket closed unexpectedly');
+    };
+  
     //code for drawing capability
     tool.maxDistance = 2;
     tool.onMouseDrag = function(event) {
-        var circle = new paper.Path.Circle(event.middlePoint, 2);
+      var circle = new paper.Path.Circle(event.middlePoint, 2);
 	    circle.fillColor = 'black';
-        console.log("position: " + circle.position);
-        dots.push(circle.position.toString());
+      //console.log("position: " + circle.position);
+      dot = {
+        "position":circle.position,
+        "color":"black"
+      }
+      
+      // use when sending a message to the server to be broadcasted to all clients.
+      // Sent the latest dot.
+      //console.log("JSON string: " + JSON.stringify(dot));
+      socket.send(JSON.stringify(event.middlePoint));
     }
     
 </script>
